add, delete, and edit file

--- a/Minggu 10/Generic/src/main/resources/application.properties
+++ b/Minggu 10/Generic/src/main/resources/application.properties
@@ -1,8 +1,13 @@
-spring.datasource.url = jdbc:mysql://localhost:3306/tugasdb
-spring.datasource.username = root
-spring.datasource.password = Dea_23cantik
-spring.jpa.hibernate.ddl-auto = update
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.database-platform = org.hibernate.dialect.MySQL5Dialect
-spring.jpa.generate-ddl=true
+#spring.datasource.url = jdbc:mysql://localhost:3306/tugasdb
+#spring.datasource.username = root
+#spring.datasource.password = Dea_23cantik
+#spring.jpa.hibernate.ddl-auto = update
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.database-platform = org.hibernate.dialect.MySQL5Dialect
+#spring.jpa.generate-ddl=true
+
+spring.h2.console.enabled=true
+spring.sql.init.platform=h2
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName = org.h2.Driver
 
